--- a/css/desktop/header.css
+++ b/css/desktop/header.css
@@ -1,15 +1,10 @@
 
-
-
-body{
-    margin:0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-
-
-
-
+ *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Averta, sans-serif;
+ }
 .background_image{
     background-image:url("../../assets/hero.svg");
     background-size: cover;
@@ -18,60 +13,212 @@ body{
     height:100vh;
 }
 
-
-
-
 .header{
     padding-top:50px;
+}
+.header img{
+    padding-bottom: 60px;
 }
 .contents{
     /* padding:30px; */
     padding-top:30px;
-    color:rgba(79, 23, 23, 0.9);
+    color: #514949;
+    margin-bottom: 50px;
 }
 .contents h1{
     font-weight:700;
+    color: #514949;
+    padding-bottom: 60px;
 }
 
 .section_two{
     padding-top:13px;
-    color:rgba(135, 45, 45, 0.9);
+    color:#514949;
     line-height:24px;
     font-weight:500;
-    font-size:15px;
+    font-size:16px;
 }
-
-
 
 .button_sections{
-    padding-top:50px;   
+    padding-top:100px;
+    margin-left: 450px;
+    display: flex;
+    padding-right:50px ;
 }
-.button_sections button{
+#button{
+    margin-right:10px ;
+}
+.button_sections a{
     padding:15px;
-    width:220px;
-    border:2px solid tomato;
-    background: transparent;
-    margin:5px;
-}
-.button_sections #active{
-    background-color:tomato;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border:1px solid #e7332b;
+    text-decoration:none;
     color:white;
+    background: #e7332b;
 }
-.button_sections #active:hover{
-    animation:blink 1s;
-    background-color:white;
-    color:black;
+.button_sections a:hover{
+    animation: opacity 1s; 
+    background-color: transparent;  
+    color: #e7332b;
 }
-.button_sections button:hover{
-    background-color:tomato;
-    animation:blink 1s;
+.button_sections #activate{
+    border:1px solid  #e7332b;
+    background-color:transparent;
+    color: #e7332b;
+}
+.button_sections #activate:hover{
+    background-color: #e7332b;
     color:white;
+    animation: opacity 1s;   
 }
 
-@keyframes blink {
-    from{
-        color:black;
-        opacity: 0;
+
+.layout_one{
+    padding-top:200px;
+    position: relative;
+}
+
+
+.content{
+    margin-bottom: 100px;
+    margin-top: 20px;
+    color: #6e6666;
+    position: relative;
+    margin: 2px 40px 100px 40px;
+}
+
+  
+.images{
+
+     display: flex;
+     position: relative;
+
+}
+
+.left{
+    position: absolute;
+    top: 330px;
+    left: 0;
+}
+
+    .right{
+        position: absolute;
+        top: 330px;
+        right: 0;
     }
+
+    .left, .right{
+        width: 250px;
+        height: 400px;
+    }
+
+    .images{
+        /* margin: 3px; */
+        width: 95%;
+        height: 700px;
+        position: relative;
+        margin-top: 50px;
+    }
+
+    .firstbox, .secondbox, .thirdbox{
+        padding:20px;
+        margin: 15px;
+        background-color: #fffafa;
+        width: 35%;
+        /* color:#514949; */
+        height: 500px;
+    }
+
+    .firstbox p, .secondbox p, .thirdbox p{
+              padding: 30px 45px 50px 25px;
+              font-size: 15px;
+              font-weight: 400;
+              line-height: 20px;
+              color:#4d4b4b;
+    }
+    .move{
+        padding-right: 0px;
+        font-size: 14px;
+    }
+    .paragraph{ 
+        padding-bottom: 100px; 
+     } 
+    .paragraph a{
+        color: #e7332b;
+        text-decoration: none;
+        /* margin-bottom: 50px; */
+        /* margin-top: 400px; */
+    }
+    .firstbox{
+        margin-left: 90px;
+    }
+    .images img{
+              
+              /* top:5; */
+              /* left:20; */
+              width: 200px;
+              height: 170px;
+              padding-left: 30px;
+              padding-top: 50px;
+    }
+
+    
+
+.footer{
+    padding-left:170px;
+    padding-top:70px;
+    position: relative;
+    color: #514949;
+}
+.footer_container{
+    height:300px;
+    border-bottom:2px solid #d6d1d1;
+    width:85%;
+    padding-top: 50px;
+    display: flex;
+    margin-left: 100px ;
+    margin-bottom: 50px;
+
+}
+.one, .two, .three, .four{
+    width: 20%;
+    margin: 30px 40px;
+    display:block;
+    margin-bottom: 50px;
+
+}
+.one img{
+    padding-right: 20px;
+    width: 50%;
+    height: 100px;
+}
+
+ footer a{
+    display:block;
+    font-weight:600;
+    color:#e7332b;
+    padding:1px 1px;
+    text-decoration:none;
+}
+
+.add{
+    margin-bottom: 20px;
+}
+.four p{
+    padding-left: 60px;
+}
+.one{
+    margin-left: 100px;
+}
+.four img{
+    width: 15%;
+    padding-left: 10px;
+}
+#four {
+    width: 15%;
+    padding-left: 10px;
+    margin-left: 50px;
+}
+.copyright{
+    color: #514949;
+    font-size: 14px;
 }
