--- a/training.zuri/css/desktop/section_intro.css
+++ b/training.zuri/css/desktop/section_intro.css
@@ -12,24 +12,31 @@
 
 
 
-.section_nexy{
+.section{
     padding-top:100px;
+    background-color: brown;
 }
 
 
-.rows{
+/* .rows{
     padding-top:240px;
     padding-left:90px;
-}
+    background-color: blue;
+} */
 
 .columns{
-    float:left;
+    /* float:left; */
+    display: flex;
+    width: 60%;
+    margin: 20px auto;
+    background-color: aqua;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .main_box{
     width:360px;
     height:400px;
-    background-color:rgb(253, 228, 228);
+    /* background-color:rgb(253, 228, 228); */
+    background-color: blueviolet;
     box-shadow:0px 6px 18px 0px rgba(239, 8, 8, 0.109);
     border-radius:10px;
     margin: 10px;
@@ -39,6 +46,7 @@
 
 .movee{
     padding-top:15px;
+    background-color: green;
 }
 .object_one{
     background-color:red;
@@ -50,6 +58,7 @@
 
 .movee2{
     padding-top:15px;
+    background-color: brown;
 }
 .movee2:hover{
     padding-top:0px;
@@ -57,6 +66,7 @@
 }
 .movee3{
     padding-top:15px;
+    background-color: black;
 }
 .movee3:hover{
     padding-top:0px;
